apps/stirling-pdf/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: stirling-pdf
  labels:
    goldilocks.fairwinds.com/enabled: "true"
