apps/stirling-pdf/k8s.stirling-pdf.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: stirling-pdf
  labels:
    goldilocks.fairwinds.com/enabled: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: stirling-pdf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: stirling-pdf
    spec:
      serviceAccount: stirling-pdf
      containers:
        - name: stirling-pdf
          # https://github.com/Stirling-Tools/Stirling-PDF
          # https://hub.docker.com/r/stirlingtools/stirling-pdf
          image: ghcr.io/stirling-tools/stirling-pdf:2.11.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 4000m
              memory: 4Gi
          volumeMounts:
            - name: configs
              mountPath: /configs
            - name: custom-files
              mountPath: /customFiles
            - name: logs
              mountPath: /logs
            - name: pipeline
              mountPath: /pipeline
            - name: tmp
              mountPath: /tmp
            - name: tessdata
              mountPath: /usr/share/tessdata
      volumes:
        - name: configs
          emptyDir: {}
        - name: custom-files
          emptyDir: {}
        - name: logs
          emptyDir: {}
        - name: pipeline
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: tessdata
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
  labels:
    app.kubernetes.io/name: stirling-pdf
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
      targetPort: 8080
  selector:
    app.kubernetes.io/name: stirling-pdf
