apps/stirling-pdf/k8s.np.stirling-pdf-default-deny.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: stirling-pdf-default-deny
  namespace: stirling-pdf
spec:
  endpointSelector: {}  # Empty selector = matches ALL pods in this namespace
  # Default deny
  ingress:
    - {}
  egress:
    - {}
